metadata/force-app/main/default/objects/CustomName_UePpF__c/CustomName_UePpF__c.object-meta.xml
<CustomObject>
    <description>Description_vnlbe</description>
    <label>CustomLabel_MoLBb</label>
    <nameField>
        <label>CustomLabel_MoLBb</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_MoLBbs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>