metadata/force-app/main/default/objects/CustomName_UePpF__c/fields/CustomField_VStCL__c.field-meta.xml
<CustomField>
    <fullName>CustomField_VStCL__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldhDCoL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>